<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tethering hack</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title">How To:</string>
    <string name="first">1 - Enable Tethering</string>
    <string name="second">2 - open a terminal app and run:</string>
    <string name="secondsu">su</string>
    <string name="secondnetcfg">netcfg</string>
    <string name="third">3 - Look which interface is UP</string>
    <string name="exampleone">EX: rmnet0</string>
    <string name="fourth">4 - look at the Subnet mask</string>
    <string name="exampletwo">EX: 176.245.xx.yyy/16</string>
    <string name="exampletwo1">("16" is the number we are looking for)</string>
    <string name="fifth">5 - Enter Interface and Subnet mask in the fields provided below</string>
    <string name="sixth">6 - Hit Enable!</string>
    <string name="Int_field">Interface</string>
    <string name="Sub_field">Subnet Mask</string>
    <string name="intro">With this hack your carrier cannot check if you are using Tethering on your device.</string>
    <string name="btn_enable">Enable</string>
    <string name="checkbox">Set on boot</string>

</resources>